#pragma once

#include <Common/String.h>

//======================================================================================================================
namespace renderer_context {
    //==================================================================================================================
    enum class RendererType {
        OpenGl,
        Vulkan,
        Direct3d,
        Sdl,
    };
}

//======================================================================================================================
String str(renderer_context::RendererType) noexcept;
